[package]
name = "buildstamp"
version = "0.3.0"
edition = "2024"

description = "Returns a buildstamp, like `23W42.12345`"

license = "MIT OR Apache-2.0"
homepage = "https://github.com/asaaki/buildstamp"
repository = "https://github.com/asaaki/buildstamp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "buildstamp"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap"]

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env"], optional = true }
time = { version = "0.3.44", features = ["formatting", "macros"] }
