[workspace]
resolver = "3"
members = [".", "cli"]

[workspace.package]
version = "0.4.2"
edition = "2024"
rust-version = "1.94.0"

[package]
name = "buildstamp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

description = "Returns a buildstamp, like `23W42.12345`"

license = "MIT OR Apache-2.0"
homepage = "https://github.com/asaaki/buildstamp"
repository = "https://github.com/asaaki/buildstamp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.45", features = ["formatting", "macros"] }
